@@ -9,19 +9,18 @@ Installation
 sites/all/modules directory of your Drupal installation (or the
 location you normally use for contributed modules).
 
-2. Go to 'Administer > Site building > Modules', and enable the Porter
-Stemmer module.
+2. Go to 'Administer > Modules', and enable the Porter Stemmer module.
 
-3. Go to 'Administer > Site configuration > Search settings' and click
-'Re-index site'.  You should do this step whenever you upgrade to a
+3. Go to 'Administer > Configuration > Search and metadata > Search settings'
+and click 'Re-index site'.  You should do this step whenever you upgrade to a
 new version of the Porter Stemmer module, so that the search index is
 rebuilt with any changes to the stemming algorithm.
 
 4. Ensure that cron has run at least once, to build the search
 index. On larger sites, it may take several cron runs to complete the
-search index. You can check progress on the Search Settings page, and
-you can run cron manually by visiting 'Reports > Status report', and
-clicking on 'Run cron manually'.
+search index. You can check progress on the Search settings page, and
+you can run cron manually by visiting 'Administer > Reports > Status report',
+and clicking on 'Run cron manually'.
 
 5. This module will use the PECL "stem" library for PHP, if it is installed
 on your server. If you have full administrative/root access to your server, and
@@ -35,4 +34,3 @@ If the PECL "stem" library is not available, the module uses a PHP
 implementation of the stemming algorithm. The output is identical.
 More information about the PECL "stem" library:
   http://pecl.php.net/package/stem
-  
