@@ -1,6 +1,10 @@
 ; $Id$
 name = Porter Stemmer
-description = "Improve English language searching by simplifying related words to their root (conjugations, plurals, ...)."
-core = 6.x
+description = "Improves American English language searching by simplifying related words to their root (conjugations, plurals, ...)."
+core = 7.x
 package = "Search"
+files[] = porterstemmer.module
+files[] = porterstemmer.test
+
+
 
